--- a/experiment_1/notebooks/preprocessing.Rmd
+++ b/experiment_1/notebooks/preprocessing.Rmd
@@ -97,7 +97,7 @@ current_data <- current_data %>%
          acc_check == 0,
          error == 0,
           quick_flag == 0) %>% 
-    select(-acc_check, -quick_flag) %>%
+    select(-acc_check, -quick_flag, -error, -list_response) %>%
     data.table()
 
 rows_after <- nrow(current_data)
